--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
           <div>Cornell University, 2016</div>
 
           <div class="ui icon buttons">
-  <button class="ui basic  button"><i><img class="custom" src="fonts/quora.png"></i></button>
-  <button class="ui basic  button"><i class="large black github icon"></i></button>
-  <button class="ui basic button"><i class="large black linkedin icon"></i></button>
-</div>
-          <button class="ui basic button">View Resume</button>
+            <a href="https://valeriemack.quora.com/"><button class="ui basic  button"><i><img class="custom" src="fonts/quora.png"></i></button>
+            </a>
+            <a href="https://github.com/thevaleriemack"><button class="ui basic  button"><i class="large black github icon"></i></button></a>
+            <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic button"><i class="large black linkedin icon"></i></button></a>
+          </div>
+
+          <a href=""><button class="ui basic button">View Resume</button></a>
         </div>
       </div>
 
