resume link. clean up designs. add favicon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+
+  <link rel="shortcut icon" type="image/png" href="images/skills-favicon.png"/>
 </head>
 <body>
   <div id="hdrImg">
@@ -73,13 +75,13 @@
           <div>Cornell University, 2016</div>
 
           <div class="ui icon buttons">
-            <a href="https://valeriemack.quora.com/"><button class="ui basic  button"><i><img class="custom" src="fonts/quora.png"></i></button>
+            <a href="https://valeriemack.quora.com/"><button class="ui basic inverted button"><i><img class="custom" src="images/quora.png"></i></button>
             </a>
-            <a href="https://github.com/thevaleriemack"><button class="ui basic  button"><i class="large black github icon"></i></button></a>
-            <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic button"><i class="large black linkedin icon"></i></button></a>
+            <a href="https://github.com/thevaleriemack"><button class="ui basic inverted button"><i class="large black github icon"></i></button></a>
+            <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic inverted button"><i class="large black linkedin icon"></i></button></a>
           </div>
 
-          <a href=""><button class="ui basic button">View Resume</button></a>
+          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wZVZqbDN6Zm1LVXc/view?usp=sharing"><button class="ui basic button">View Resume</button></a>
         </div>
       </div>
 
@@ -400,7 +402,7 @@
         <div name="designs" class="ui basic segment">
 
           <h3 class="ui divider horizontal hidden">
-            <p>Graphic Designs</p>
+            <p>Featured Designs</p>
           </h3>
 
           <!-- divider -->
@@ -409,17 +411,19 @@
             <div class="column">
               <img class="ui medium image left floated" src="images/dinos.png" alt="Geometric dionsaurs adapted from ">
               <img class="ui medium image left floated" src="images/julieskitchen.png" alt="Logo design for seasonal kitchen">
-              <img class="ui medium image left floated" src="images/condom.png" alt="Condom design for ONE">
-              <img class="ui medium image left floated" src="images/hotelapp.png">
+              <img class="ui medium image left floated" src="images/condom2.png" alt="Condom design for ONE">
+              <img class="ui medium image left floated" src="images/hotelapp.png" alt="Hotel app for 3DS Hackathon">
             </div>
             <div class="column">
-              <img class="ui medium image left floated" src="images/bevclub.png">
-              <img class="ui medium image left floated" src="images/soundspace.png">
+              <img class="ui medium image left floated" src="images/hummingbirds.png" alt="CD album cover design">
+              <img class="ui medium image left floated" src="images/noneshallpass.png" alt="Condom design for ONE">
+              <img class="ui medium image left floated" src="images/bevclub.png" alt="Advertisement for Cornell Beverage Club">
+              <img class="ui medium image left floated" src="images/soundspace.png" alt="Advertisement for Soundspace">
             </div>
             <div class="column">
-              <img class="ui medium image left floated" src="images/duvv.png">
-              <img class="ui medium image left floated" src="images/ccp.png">
-
+              <img class="ui medium image left floated" src="images/duvv.png" alt="Logo design for Duvv music">
+              <img class="ui medium image left floated" src="images/ccp.png" alt="Logo designs for CCP sustainability initiative">
+              <img class="ui medium image left floated" src="images/bigredcarnevale.png" alt="Advertisement for Cornell club event">
             </div>
           </div>
 
@@ -455,7 +459,7 @@
 </div>
 
   <div class="ui footer vertical segment">
-This website was created by Valerie Denay Mack. &copy; 2016
+This website was created by Valerie Denay Mack &copy; 2016
 </div>
 
 
