comment out cards without pictures

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <div id="bellecard1" class="hider ui segment">
             <a class='item allpjcts'>
               <button class='circular basic ui icon button'>
-                <i class='reply icon'></i>
+                <i class='icon left chevron'></i>
               </button>
             </a>
 
@@ -285,15 +285,15 @@
             <p>Belle Delivery is a startup from Life Changing Labs in Ithaca New York. I wrote the diagram for their landing page using the &lt;canvas&gt; element so that it would be responsive. I also designed the UI for their web application.
             </p>
 
-            <div class="ui medium rounded images">
+            <!-- <div class="ui medium rounded images">
               <a><img class="ui medium image" src="images/samples/gix-dashboard.png" alt="Dashboard Mockup"></a>
               <img class="ui medium image" src="images/samples/gix-home.png" alt="Home Page Mockup">
-            </div>
+            </div> -->
 
-            <div class="ui medium rounded images">
+            <!-- <div class="ui medium rounded images">
               <img class="ui medium image" src="images/samples/gix-session.png" alt="Session Mockup">
               <img class="ui medium image" src="images/samples/gix-profile.png" alt="Profile Mockup">
-            </div>
+            </div> -->
             <!-- bellecard1 -->
           </div>
 
@@ -380,18 +380,18 @@
               In addition to helping develop their design team, I had an active role in faciliating communication between members of the engineering, business, and design teams.
             </p>
 
-            <div class="ui medium rounded images">
+            <!-- <div class="ui medium rounded images">
               <a><img class="ui medium image" src="images/samples/gix-dashboard.png" alt="Dashboard Mockup"></a>
               <img class="ui medium image" src="images/samples/gix-home.png" alt="Home Page Mockup">
-            </div>
+            </div> -->
 
             <p>
             </p>
 
-            <div class="ui medium rounded images">
+            <!-- <div class="ui medium rounded images">
               <img class="ui medium image" src="images/samples/gix-session.png" alt="Session Mockup">
               <img class="ui medium image" src="images/samples/gix-profile.png" alt="Profile Mockup">
-            </div>
+            </div> -->
             <!-- augmatecard1 -->
           </div>
 
