contact info for mobile

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="four wide column" id="leftSide">
       <div class="ui basic sticky center aligned segment" id="sdBr">
         <h1 class="ui header">
-          <div class="content">Val</div>
+          <div class="content" id="theHead">Val</div>
           <div class="sub header">Strategist • Leader • Designer</div>
           </h1>
           <div>BA Information Science</div>
