--- a/index.html
+++ b/index.html
@@ -47,6 +47,23 @@
 
       </div>
 
+      <!-- mobile -->
+  <div class="ui basic center aligned segment" id="jankless">
+    <div>BA Information Science</div>
+          <div>Business Minor</div>
+          <div>Cornell University, 2016</div>
+
+          <div class="ui icon buttons">
+            <a href="https://valeriemack.quora.com/"><button class="ui basic inverted button"><i><img class="custom" src="images/quora.png"></i></button>
+            </a>
+            <a href="https://github.com/thevaleriemack"><button class="ui basic inverted button"><i class="large black github icon"></i></button></a>
+            <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic inverted button"><i class="large black linkedin icon"></i></button></a>
+          </div>
+
+          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wZVZqbDN6Zm1LVXc/view?usp=sharing"><button class="ui basic button">View Resume</button></a>
+  <!-- mobile -->
+  </div>
+
       <div id="dropdown-icon">
 
         <a href="#projects">
