augmate sample images

--- a/index.html
+++ b/index.html
@@ -403,18 +403,18 @@
               In addition to helping develop their design team, I had an active role in faciliating communication between members of the engineering, business, and design teams.
             </p>
 
-            <!-- <div class="ui medium rounded images">
-              <a><img class="ui medium image" src="images/samples/gix-dashboard.png" alt="Dashboard Mockup"></a>
-              <img class="ui medium image" src="images/samples/gix-home.png" alt="Home Page Mockup">
-            </div> -->
+            <div class="ui medium rounded images">
+              <a><img class="ui medium image" src="images/samples/augmate-aes.png" alt="Augmate Design Aesthetic"></a>
+              <img class="ui medium image" src="images/samples/augmate-cyclecount.png" alt="Home Page Mockup">
+            </div>
 
             <p>
             </p>
 
-            <!-- <div class="ui medium rounded images">
-              <img class="ui medium image" src="images/samples/gix-session.png" alt="Session Mockup">
-              <img class="ui medium image" src="images/samples/gix-profile.png" alt="Profile Mockup">
-            </div> -->
+            <div class="ui medium rounded images">
+              <img class="ui medium image" src="images/samples/augmate-cyclecount2.png" alt="Cycle Counting Google Glass Mockups">
+              <img class="ui medium image" src="images/samples/augmate-aes3.png" alt="OSHA Color Standard">
+            </div>
             <!-- augmatecard1 -->
           </div>
 
