update alt image captions

--- a/index.html
+++ b/index.html
@@ -405,14 +405,14 @@
 
             <div class="ui medium rounded images">
               <a><img class="ui medium image" src="images/samples/augmate-aes.png" alt="Augmate Design Aesthetic"></a>
-              <img class="ui medium image" src="images/samples/augmate-cyclecount.png" alt="Home Page Mockup">
+              <img class="ui medium image" src="images/samples/augmate-cyclecount.png" alt="Cycle Count Workflow">
             </div>
 
             <p>
             </p>
 
             <div class="ui medium rounded images">
-              <img class="ui medium image" src="images/samples/augmate-cyclecount2.png" alt="Cycle Counting Google Glass Mockups">
+              <img class="ui medium image" src="images/samples/augmate-cyclecount2.png" alt="Cycle Counting Google Glass">
               <img class="ui medium image" src="images/samples/augmate-aes3.png" alt="OSHA Color Standard">
             </div>
             <!-- augmatecard1 -->
