delete three words. update about.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           <div class="center aligned row">
             <div class="column">
             </div>
-            <div class="column">
-              I discover needs, generate ideas, sweat the details, take initiative, am adaptable, know my strengths, know my weaknesses, and work passionately.
+            <div class="column"><p>
+              I discover needs, generate ideas, sweat the details, take initiative, am adaptable, know my strengths, know my weaknesses, and work passionately.</p>
             </div>
             <div class="column">
             </div>
@@ -91,7 +91,6 @@
       <div class="ui basic sticky center aligned segment" id="sdBr">
         <h1 class="ui header">
           <div class="content" id="theHead">Val</div>
-          <div class="sub header">Strategist • Leader • Designer</div>
           </h1>
           <div>BA Information Science</div>
           <div>Business Minor</div>
@@ -482,7 +481,7 @@
 </div>
 
   <div class="ui footer vertical segment">
-This website was created by Valerie Denay Mack &copy; 2016
+This website was created by Valerie Denay Mack. At the moment, it appears best on Chrome. &copy; 2016
 </div>
 
 
