fix header sliding. request resume

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic inverted button"><i class="large black linkedin icon"></i></button></a>
           </div>
 
-          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wZVZqbDN6Zm1LVXc/view?usp=sharing"><button class="ui basic button">View Resume</button></a>
+          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wZVZqbDN6Zm1LVXc/view?usp=sharing"><button class="ui basic button">Request Resume</button></a>
   <!-- mobile -->
   </div>
 
@@ -103,7 +103,7 @@
             <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic inverted button"><i class="large black linkedin icon"></i></button></a>
           </div>
 
-          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wZVZqbDN6Zm1LVXc/view?usp=sharing"><button class="ui basic button">View Resume</button></a>
+          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wZVZqbDN6Zm1LVXc/view?usp=sharing"><button class="ui basic button">Request Resume</button></a>
         </div>
       </div>
 
