mobile spacingand dropdown

--- a/index.html
+++ b/index.html
@@ -67,8 +67,18 @@
           </div>
 
           <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wZVZqbDN6Zm1LVXc/view?usp=sharing"><button class="ui basic button">Request Resume</button></a>
-  <!-- mobile -->
+  
   </div>
+  <div id="dropdown-icon-mobile">
+
+        <a href="#projects">
+          <button class='circular basic ui icon button'>
+            <i class='dropdown icon'></i>
+          </button>
+        </a>
+
+      </div>
+      <!-- mobile -->
 
       <div id="dropdown-icon">
 
@@ -481,7 +491,8 @@
 </div>
 
   <div class="ui footer vertical segment">
-This website was created by Valerie Denay Mack. At the moment, it appears best on Chrome. &copy; 2016
+    <p>This website was created by Valerie Denay Mack. </p>
+    <p>&copy; 2016</p>
 </div>
 
 
