add stranger project, add to augmate and belle

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
         <div class="ui huge centered header">Valerie Denay Mack</div>
 
-        <div class="ui equal width three column relaxed stackable grid container"> 
+        <div class="ui three column relaxed stackable grid container"> 
           <div class="center aligned row">
-            <div class="column">
+            <div class="four wide column">
             </div>
-            <div class="column"><p>
-              I discover needs, generate ideas, sweat the details, take initiative, am adaptable, know my strengths, know my weaknesses, and work passionately.</p>
+            <div class="eight wide column"><p>
+              I discover needs, generate ideas, sweat the details, take initiative, know my strengths, know my weaknesses,  work passionately, and adapt to anything.</p>
             </div>
-            <div class="column">
+            <div class="four wide column">
             </div>
           </div>
         </div>
@@ -164,7 +164,7 @@
               <a href="http://www.kongregate.com/games/maxxmcc/clone-combat">Play on Kongregate</a>
             </span>
 
-            <p>Clone Combat is a game that my team and I created for our Analytics-Driven Game Design class. I came up with the concept for this puzzle platformer where the player has to defeat clones who mirror each of the player's inputs in real time. We successfully executed our ideas, creating three iterative versions that improved over time.</p>
+            <p>Clone Combat is a game that I created with classmates for our Analytics-Driven Game Design course. I came up with the concept for this puzzle platformer where the player has to defeat clones who mirror each of the player's inputs in real time. We successfully executed our ideas, creating three iterative versions that improved over each design cycle.</p>
 
             <div class="ui medium rounded images">
               <img class="ui medium image" src="images/samples/level22.png" alt="Kongregate Level 22">
@@ -172,15 +172,79 @@
             </div>
 
             <p>My primary roles were user interface and user experience designer.</p>
-            <p>Our data analysis showed that our greatest design challenge was learnability, so I created comprehensive tutorial levels to increase player engagement.</p>
-
-            <p>Clone Combat was one of the most successful games produced from our class. It was featured on Newgrounds and received a 3.5 / 5 rating and over 20,000 plays in the first week. With a tougher audience on Kongregate, we received a 3.1 / 5 star rating.</p>
+            <p>After analyzing our data from play testers, I concluded that our greatest design challenge was learnability, so I created comprehensive tutorial levels that increased player engagement. (See slides on top right and bottom left.)</p>
 
             <div class="ui medium rounded images">
               <img class="ui medium image" src="images/samples/tutoriallevel.png" alt="Conduction Tutorial Level">
               <img class="ui medium image" src="images/samples/newgrounds.png" alt="Newgrounds Results">
             </div>
 
+            <p>Clone Combat was one of the most successful games produced from our class. It was featured on Newgrounds and received a 3.5 / 5 rating and over 20,000 plays in the first week. With a tougher audience on Kongregate, we received a 3.1 / 5 star rating.</p>
+
+          <!-- clonecard1 -->
+          </div>
+
+          <a href="#augmatecard1" class="ui centered fluid card" id="augmatecard">
+            <div class="blurring dimmable image">
+              <div class="ui dimmer">
+                <div class="content">
+                  <div class="center">
+                    <div class="description">
+                      UX research &amp; design
+                    </div>
+                    <div class="plus icon wrapper">
+                      <button class='circular basic inverted ui icon button'>
+                        <i class='plus icon'></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <img src="images/covers/augmate-cover.png">
+            </div>
+          </a>
+
+          <div id="augmatecard1" class="hider ui segment">
+
+            <a class='item allpjcts'>
+              <button class='circular basic ui icon button'>
+                <i class='icon left chevron'></i>
+              </button>
+            </a>
+
+            <h2 class="header">Augmate</h2>
+
+            <p>I was fortunate enough to be a UX intern for the wearable tech startup Augmate, through the Grand Central Tech accelerator. One of my main projects was to design a research experiment to test usability of the scanning feature that the programming team developed.
+            </p>
+
+            <p>
+             We created a room booking application to use as a test prototype, and I recruited 5 early adopters who had little to no experience with Glass to do user testing. Participants were tasked with reserving a room for a meeting using our Google Glass application.
+             </p>
+
+            <div class="ui medium rounded images">
+              <img class="ui medium image" src="images/samples/augmate-gctapp.png" alt="Room Booking App Workflow">
+              <img class="ui medium image" src="images/samples/augmate-glasslayout.png" alt="Glass Content Layout">
+            </div>
+
+             <p>
+              Through observation and structured qualitative interviews I identified patterns in users’ activities, attitudes, and aptitudes. While participants understood how to use the app to accomplish their task, they had difficulty operating our barcode scanner and got confused on what type of input was required for each action.
+              </p>
+              <p>
+                These findings were incorporated into the development of the Augmate warehouse application for our client UPS. The programming team focused on increasing the accessible range of the scanner and reducing scanning speed.
+              </p>
+              <p>
+              I began drafting multiple versions of potential interface designs to make instructions more clear. (See "Cycle Counting" image below.)
+            </p>
+
+            <div class="ui medium rounded images">
+              <img class="ui medium image" src="images/samples/augmate-cyclecount2.png" alt="Cycle Counting Google Glass">
+              <img class="ui medium image" src="images/samples/augmate-cyclecount.png" alt="Cycle Count Workflow">
+            </div>
+
+            <p>
+              In addition to my design work, I had an active role in faciliating communication between members of the engineering, business, and design teams.
+            </p>
+            <!-- augmatecard1 -->
           </div>
 
           <a href="#watchcard1" class="ui centered fluid card" id="watchcard">
@@ -212,7 +276,7 @@
 
             <h2 class="header">Mechanical Dreams</h2>
 
-            <p>I did not have a formal internship this past summer, so I had to create one from scratch. Using my deveoping interest in werables, I turned to the watchmaking industry to learn more about the history of mechanical timepieces and where they are headed as technological capabilites develop further.
+            <p>I did not have a formal internship this past summer, so I had to create one from scratch. Using my deveoping interest in wearables, I turned to the watchmaking industry to learn more about the history of mechanical timepieces and where they are headed as technological capabilites develop further.
             </p>
 
             <div class="ui medium rounded images">
@@ -230,6 +294,53 @@
               <img class="ui medium image" src="images/samples/watch-settings.png" alt="Settings Wireframe">
             </div>
             <!-- watchcard1 -->
+          </div>
+
+          <a href="#strangercard1" class="ui centered fluid card" id="strangercard">
+            <div class="blurring dimmable image">
+              <div class="ui dimmer">
+                <div class="content">
+                  <div class="center">
+                    <div class="description">
+                      Human Computer Interaction
+                    </div>
+                    <div class="plus icon wrapper">
+                      <button class='circular basic inverted ui icon button'>
+                        <i class='plus icon'></i>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <img src="images/covers/stranger-cover.png">
+            </div>
+          </a>
+
+          <div id="strangercard1" class="hider ui segment">
+            <a class='item allpjcts'>
+              <button class='circular basic ui icon button'>
+                <i class='icon left chevron'></i>
+              </button>
+            </a>
+
+            <h2 class="header">Familiar Stranger Interaction</h2>
+
+            <p>In my Advanced Human Computer Interaction course I explored familiar stranger interaction in dining places, which lead to an understanding of the barriers that prevent these interactions.
+            </p>
+
+            <p>
+              My team members and I used four research methods and designed two protoypes based on our hypothesis that there is a desire for the value that a more interactive local community provides.
+            </p>
+
+            <div class="ui medium rounded images">
+              <img class="ui medium image" src="images/samples/stranger-method.png" alt="Research Method">
+              <img class="ui medium image" src="images/samples/stranger-sociallight.png" alt="Social-Light Undesign Concept">
+            </div>
+
+            <p>
+              Contrary to what much of the HCI community focuses on--we acknowledged a necessity to ignore capabilities that often lead to technology-based design solutions, in order to have a more thorough understanding of our problem, its effects on people, and how we can design for it. In doing so, we expanded the traditional idea of “design” to include undesign and non-design approaches.
+            </p>
+            <!-- strangercard1 -->
           </div>
 
           <a href="#gixcard1" class="ui centered fluid card" id="gixcard">
@@ -261,7 +372,7 @@
 
             <h2 class="header">gix science</h2>
 
-            <p>Gix is a startup that came out of Cornell's ELab program. I was asked to be the designer for their web application platform, aimed at transforming the way we do science.
+            <p>Gix is a startup that came out of Cornell's ELab program. I was asked to be the designer for their web platform, aimed at transforming the way we do science.
             </p>
 
             <div class="ui medium rounded images">
@@ -269,7 +380,7 @@
               <img class="ui medium image" src="images/samples/gix-home.png" alt="Home Page Mockup">
             </div>
 
-            <p>The web app is a cloud-based data collection, analysis and storage platform where users can share and display content using iPython notebooks. It is similar to github, as it allows researchers a form of version control that can be easily examined, replicated, and experimented with by others.
+            <p>Gix is a cloud-based data collection, analysis, and storage platform where users can share and display content using iPython notebooks. It is similar to github, as it allows researchers a form of version control that can be easily examined, replicated, and experimented with by others.
             </p>
             <p>Gix also provides a unique way for researchers to be recognized for the work they have contributed to by keeping track of when and where their publications have been cited.
             </p>
@@ -314,18 +425,22 @@
 
             <h2 class="header">Belle Delivery</h2>
 
+            <span class="left floated">
+              <a href="http://www.belledelivery.com">Visit Website</a>
+            </span>
+
             <p>Belle Delivery is a startup from Life Changing Labs in Ithaca New York. I wrote the diagram for their landing page using the &lt;canvas&gt; element so that it would be responsive. I also designed the UI for their web application.
             </p>
 
-            <!-- <div class="ui medium rounded images">
-              <a><img class="ui medium image" src="images/samples/gix-dashboard.png" alt="Dashboard Mockup"></a>
-              <img class="ui medium image" src="images/samples/gix-home.png" alt="Home Page Mockup">
-            </div> -->
+            <div class="ui medium rounded images">
+              <a><img class="ui medium image" src="images/samples/belle-home.png" alt="Home Page Mockup"></a>
+              <img class="ui medium image" src="images/samples/belle-login.png" alt="Login Page Mockup">
+            </div>
 
-            <!-- <div class="ui medium rounded images">
-              <img class="ui medium image" src="images/samples/gix-session.png" alt="Session Mockup">
-              <img class="ui medium image" src="images/samples/gix-profile.png" alt="Profile Mockup">
-            </div> -->
+            <div class="ui medium rounded images">
+              <img class="ui medium image" src="images/samples/belle-order.png" alt="Order Form Mockup">
+              <img class="ui medium image" src="images/samples/belle-order1.png" alt="Order Form Mockup 2">
+            </div>
             <!-- bellecard1 -->
           </div>
 
@@ -377,56 +492,6 @@
             <!-- jesturecard1 -->
           </div>
 
-          <a href="#augmatecard1" class="ui centered fluid card" id="augmatecard">
-            <div class="blurring dimmable image">
-              <div class="ui dimmer">
-                <div class="content">
-                  <div class="center">
-                    <div class="description">
-                      UX research &amp; design
-                    </div>
-                    <div class="plus icon wrapper">
-                      <button class='circular basic inverted ui icon button'>
-                        <i class='plus icon'></i>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <img src="images/covers/augmate-cover.png">
-            </div>
-          </a>
-
-          <div id="augmatecard1" class="hider ui segment">
-
-            <a class='item allpjcts'>
-              <button class='circular basic ui icon button'>
-                <i class='icon left chevron'></i>
-              </button>
-            </a>
-
-            <h2 class="header">Augmate</h2>
-
-            <p>I was fortunate enough to be a UX intern for the wearable tech startup Augmate, through the Grand Central Tech accelerator. I created various forms of visual documentaiton for the company and their clients, including use case flow diagrams and mockups of their warehouse application for Google Glass.
-
-              In addition to helping develop their design team, I had an active role in faciliating communication between members of the engineering, business, and design teams.
-            </p>
-
-            <div class="ui medium rounded images">
-              <a><img class="ui medium image" src="images/samples/augmate-aes.png" alt="Augmate Design Aesthetic"></a>
-              <img class="ui medium image" src="images/samples/augmate-cyclecount.png" alt="Cycle Count Workflow">
-            </div>
-
-            <p>
-            </p>
-
-            <div class="ui medium rounded images">
-              <img class="ui medium image" src="images/samples/augmate-cyclecount2.png" alt="Cycle Counting Google Glass">
-              <img class="ui medium image" src="images/samples/augmate-aes3.png" alt="OSHA Color Standard">
-            </div>
-            <!-- augmatecard1 -->
-          </div>
-
           <!-- segment -->
         </div>
 
@@ -434,7 +499,7 @@
         <div name="designs" class="ui basic segment">
 
           <h3 class="ui divider horizontal hidden">
-            <p>Featured Designs</p>
+            <p>Featured Graphic Designs</p>
           </h3>
 
           <!-- divider -->
